Created page with "==== Vypnuté pracovní plochy ===="

--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -103,7 +103,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Pracovn&iacute; plocha Spreadsheet</a> Pracovn&iacute; plocha Spreadsheet.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Surface_Workbench.html" title="Surface Workbench">Pracovn&iacute; plocha Surface</a> poskytuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; a &uacute;pravy povrch&#367;. Je podobn&yacute; funkci <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> Vytvo&#345;it plochu z hran.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; plocha TechDrawh</a> pro vytv&aacute;&#345;en&iacute; technick&yacute;ch v&yacute;kres&#367; z 3D model&#367;. Je n&aacute;stupcem programu <a href="../Drawing_Workbench.html" title="Drawing Workbench">Drawing Workbench</a>.</li></ul>
-<h4><span class="mw-headline" id="Disabled_workbenches">Disabled workbenches</span></h4>
+<p><span id="Disabled_workbenches"></span>
+</p>
+<h4><span id="Vypnut.C3.A9_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Vypnut&eacute;_pracovn&iacute;_plochy">Vypnut&eacute; pracovn&iacute; plochy</span></h4>
 <p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span> The following rarely used workbenches are <a href="../Workbenches.html#Current" title="Workbenches">disabled</a> by default, they can be enabled in <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Inspection_Workbench.html" title="Inspection Workbench">Inspection Workbench</a> is made to give you specific tools for the examination of shapes. Still in the early stages of development.</li></ul>
@@ -151,13 +153,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112030701
+Cached time: 20260112030727
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.103 seconds
-Real time usage: 0.141 seconds
-Preprocessor visited node count: 201/1000000
+Real time usage: 0.177 seconds
+Preprocessor visited node count: 202/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
 Highest expansion depth: 5/100
@@ -167,16 +169,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.601      1 -total
- 51.84%    6.014      1 Template:Manual:TOC
- 39.50%    4.582      1 Manual:Summary/cs
- 16.05%    1.862      2 Template:Docnav
-  9.71%    1.127      2 Template:VersionMinus
-  8.77%    1.018      3 Template:Version
-  8.28%    0.961      2 Template:MenuCommand
+100.00%   19.150      1 -total
+ 55.44%   10.617      1 Template:Manual:TOC
+ 45.31%    8.677      1 Manual:Summary/cs
+ 16.93%    3.243      2 Template:Docnav
+  8.32%    1.593      3 Template:Version
+  6.35%    1.216      2 Template:MenuCommand
+  5.82%    1.115      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112030701 and revision id 1737016. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112030727 and revision id 1737018. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
