Created page with "{{Version|1.1}} Následující zřídka používané pracovní plochy jsou ve výchozím nastavení [[Workbenches#Current|deaktivovány]], lze je aktivovat v[[Preferences_Editor#Workbenches|předvolbách]]:"

--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -106,7 +106,7 @@
 <p><span id="Disabled_workbenches"></span>
 </p>
 <h4><span id="Vypnut.C3.A9_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Vypnut&eacute;_pracovn&iacute;_plochy">Vypnut&eacute; pracovn&iacute; plochy</span></h4>
-<p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span> The following rarely used workbenches are <a href="../Workbenches.html#Current" title="Workbenches">disabled</a> by default, they can be enabled in <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>:
+<p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span> N&aacute;sleduj&iacute;c&iacute; z&#345;&iacute;dka pou&#382;&iacute;van&eacute; pracovn&iacute; plochy jsou ve v&yacute;choz&iacute;m nastaven&iacute; <a href="../Workbenches.html#Current" title="Workbenches">deaktivov&aacute;ny</a>, lze je aktivovat v<a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">p&#345;edvolb&aacute;ch</a>:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Inspection_Workbench.html" title="Inspection Workbench">Inspection Workbench</a> is made to give you specific tools for the examination of shapes. Still in the early stages of development.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_OpenSCAD.svg&amp;filetimestamp=20200404173116&amp;.html" class="mw-file-description"><img src="../File/Workbench_OpenSCAD.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">OpenSCAD Workbench</a> for interoperability with OpenSCAD and repairing <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">constructive solid geometry</a> (CSG) model history.</li></ul>
@@ -153,12 +153,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112030727
+Cached time: 20260112030906
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.177 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.180 seconds
 Preprocessor visited node count: 202/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -169,16 +169,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.150      1 -total
- 55.44%   10.617      1 Template:Manual:TOC
- 45.31%    8.677      1 Manual:Summary/cs
- 16.93%    3.243      2 Template:Docnav
-  8.32%    1.593      3 Template:Version
-  6.35%    1.216      2 Template:MenuCommand
-  5.82%    1.115      2 Template:VersionMinus
+100.00%   19.627      1 -total
+ 41.39%    8.123      1 Template:Manual:TOC
+ 29.05%    5.702      1 Manual:Summary/cs
+ 19.58%    3.843      2 Template:Docnav
+ 14.01%    2.749      2 Template:MenuCommand
+ 11.25%    2.208      3 Template:Version
+  8.96%    1.758      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112030727 and revision id 1737018. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112030905 and revision id 1737020. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
