--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Interfejs programu FreeCAD (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--high" title="[[Manual:A_Interface_do_FreeCAD/pt-br|A Interface do FreeCAD]] (91% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:Interfa&#539;a FreeCAD (18% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; FreeCAD (91% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;FreeCAD &#30028;&#38754; (27% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--high" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;FreeCAD&#12398;&#12518;&#12540;&#12470;&#12540;&#12452;&#12531;&#12479;&#12501;&#12455;&#12540;&#12473; (91% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -108,7 +108,7 @@
 <h4><span id="Vypnut.C3.A9_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Vypnut&eacute;_pracovn&iacute;_plochy">Vypnut&eacute; pracovn&iacute; plochy</span></h4>
 <p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span> N&aacute;sleduj&iacute;c&iacute; z&#345;&iacute;dka pou&#382;&iacute;van&eacute; pracovn&iacute; plochy jsou ve v&yacute;choz&iacute;m nastaven&iacute; <a href="../Workbenches.html#Current" title="Workbenches">deaktivov&aacute;ny</a>, lze je aktivovat v<a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">p&#345;edvolb&aacute;ch</a>:
 </p>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Inspection_Workbench.html" title="Inspection Workbench">Inspection Workbench</a> is made to give you specific tools for the examination of shapes. Still in the early stages of development.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Inspection_Workbench.html" title="Inspection Workbench">Pracovn&iacute; plocha Inspection</a> je vytvo&#345;ena tak, aby v&aacute;m poskytla konkr&eacute;tn&iacute; n&aacute;stroje pro zkoum&aacute;n&iacute; tvar&#367;. St&aacute;le se nach&aacute;z&iacute; v ran&eacute; f&aacute;zi v&yacute;voje.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_OpenSCAD.svg&amp;filetimestamp=20200404173116&amp;.html" class="mw-file-description"><img src="../File/Workbench_OpenSCAD.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">OpenSCAD Workbench</a> for interoperability with OpenSCAD and repairing <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">constructive solid geometry</a> (CSG) model history.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Robot.svg&amp;filetimestamp=20200404173908&amp;.html" class="mw-file-description"><img src="../File/Workbench_Robot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Robot_Workbench.html" title="Robot Workbench">Robot Workbench</a> for studying robot movements. Currently unmaintained.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Testing.html" title="Testing">Test Framework Workbench</a> is for debugging FreeCAD.</li></ul>
@@ -153,32 +153,32 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112030906
+Cached time: 20260112031013
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.180 seconds
+CPU time usage: 0.136 seconds
+Real time usage: 0.204 seconds
 Preprocessor visited node count: 202/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2911/5000000 bytes
+Unstrip post&#8208;expand size: 2912/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.627      1 -total
- 41.39%    8.123      1 Template:Manual:TOC
- 29.05%    5.702      1 Manual:Summary/cs
- 19.58%    3.843      2 Template:Docnav
- 14.01%    2.749      2 Template:MenuCommand
- 11.25%    2.208      3 Template:Version
-  8.96%    1.758      2 Template:VersionMinus
+100.00%   20.727      1 -total
+ 51.92%   10.762      1 Template:Manual:TOC
+ 36.14%    7.490      1 Manual:Summary/cs
+ 13.88%    2.877      2 Template:Docnav
+ 11.82%    2.451      2 Template:MenuCommand
+  9.36%    1.939      3 Template:Version
+  8.28%    1.717      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112030905 and revision id 1737020. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112031012 and revision id 1737022. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
