--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -109,7 +109,7 @@
 <p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span> N&aacute;sleduj&iacute;c&iacute; z&#345;&iacute;dka pou&#382;&iacute;van&eacute; pracovn&iacute; plochy jsou ve v&yacute;choz&iacute;m nastaven&iacute; <a href="../Workbenches.html#Current" title="Workbenches">deaktivov&aacute;ny</a>, lze je aktivovat v<a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">p&#345;edvolb&aacute;ch</a>:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Inspection_Workbench.html" title="Inspection Workbench">Pracovn&iacute; plocha Inspection</a> je vytvo&#345;ena tak, aby v&aacute;m poskytla konkr&eacute;tn&iacute; n&aacute;stroje pro zkoum&aacute;n&iacute; tvar&#367;. St&aacute;le se nach&aacute;z&iacute; v ran&eacute; f&aacute;zi v&yacute;voje.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_OpenSCAD.svg&amp;filetimestamp=20200404173116&amp;.html" class="mw-file-description"><img src="../File/Workbench_OpenSCAD.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">OpenSCAD Workbench</a> for interoperability with OpenSCAD and repairing <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">constructive solid geometry</a> (CSG) model history.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_OpenSCAD.svg&amp;filetimestamp=20200404173116&amp;.html" class="mw-file-description"><img src="../File/Workbench_OpenSCAD.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">Pracovn&iacute; plocha OpenSCAD</a> pro interoperabilitu s OpenSCADem a opravu historie model&#367; <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">konstruktivn&iacute; pevn&eacute; geometrie</a> (CSG).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Robot.svg&amp;filetimestamp=20200404173908&amp;.html" class="mw-file-description"><img src="../File/Workbench_Robot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Robot_Workbench.html" title="Robot Workbench">Robot Workbench</a> for studying robot movements. Currently unmaintained.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Testing.html" title="Testing">Test Framework Workbench</a> is for debugging FreeCAD.</li></ul>
 <h3><span class="mw-headline" id="The_interface">The interface</span></h3>
@@ -153,12 +153,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112031013
+Cached time: 20260112031131
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.136 seconds
-Real time usage: 0.204 seconds
+CPU time usage: 0.109 seconds
+Real time usage: 0.159 seconds
 Preprocessor visited node count: 202/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -169,16 +169,16 @@ Unstrip post&#8208;expand size: 2912/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.727      1 -total
- 51.92%   10.762      1 Template:Manual:TOC
- 36.14%    7.490      1 Manual:Summary/cs
- 13.88%    2.877      2 Template:Docnav
- 11.82%    2.451      2 Template:MenuCommand
-  9.36%    1.939      3 Template:Version
-  8.28%    1.717      2 Template:VersionMinus
+100.00%   16.256      1 -total
+ 46.82%    7.611      1 Template:Manual:TOC
+ 29.39%    4.777      1 Manual:Summary/cs
+ 16.54%    2.689      2 Template:MenuCommand
+ 11.68%    1.898      2 Template:Docnav
+ 10.99%    1.786      3 Template:Version
+  9.25%    1.503      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112031012 and revision id 1737022. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112031131 and revision id 1737024. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
