--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -110,7 +110,7 @@
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Inspection_Workbench.html" title="Inspection Workbench">Pracovn&iacute; plocha Inspection</a> je vytvo&#345;ena tak, aby v&aacute;m poskytla konkr&eacute;tn&iacute; n&aacute;stroje pro zkoum&aacute;n&iacute; tvar&#367;. St&aacute;le se nach&aacute;z&iacute; v ran&eacute; f&aacute;zi v&yacute;voje.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_OpenSCAD.svg&amp;filetimestamp=20200404173116&amp;.html" class="mw-file-description"><img src="../File/Workbench_OpenSCAD.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">Pracovn&iacute; plocha OpenSCAD</a> pro interoperabilitu s OpenSCADem a opravu historie model&#367; <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">konstruktivn&iacute; pevn&eacute; geometrie</a> (CSG).</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Robot.svg&amp;filetimestamp=20200404173908&amp;.html" class="mw-file-description"><img src="../File/Workbench_Robot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Robot_Workbench.html" title="Robot Workbench">Robot Workbench</a> for studying robot movements. Currently unmaintained.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Robot.svg&amp;filetimestamp=20200404173908&amp;.html" class="mw-file-description"><img src="../File/Workbench_Robot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Robot_Workbench.html" title="Robot Workbench">Pracovn&iacute; plocha Robot</a> pro studium pohyb&#367; robot&#367;. V sou&#269;asn&eacute; dob&#283; nen&iacute; udr&#382;ov&aacute;n.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Testing.html" title="Testing">Test Framework Workbench</a> is for debugging FreeCAD.</li></ul>
 <h3><span class="mw-headline" id="The_interface">The interface</span></h3>
 <p>Let's have a better look at the different parts of the interface:
@@ -153,12 +153,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112031131
+Cached time: 20260112031253
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.109 seconds
-Real time usage: 0.159 seconds
+Real time usage: 0.273 seconds
 Preprocessor visited node count: 202/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -169,16 +169,16 @@ Unstrip post&#8208;expand size: 2912/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.256      1 -total
- 46.82%    7.611      1 Template:Manual:TOC
- 29.39%    4.777      1 Manual:Summary/cs
- 16.54%    2.689      2 Template:MenuCommand
- 11.68%    1.898      2 Template:Docnav
- 10.99%    1.786      3 Template:Version
-  9.25%    1.503      2 Template:VersionMinus
+100.00%   29.918      1 -total
+ 71.85%   21.495      1 Template:Manual:TOC
+ 59.36%   17.759      1 Manual:Summary/cs
+  9.43%    2.822      2 Template:VersionMinus
+  6.27%    1.877      2 Template:Docnav
+  4.89%    1.463      2 Template:MenuCommand
+  4.81%    1.439      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112031131 and revision id 1737024. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112031253 and revision id 1737026. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
