--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -112,7 +112,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_OpenSCAD.svg&amp;filetimestamp=20200404173116&amp;.html" class="mw-file-description"><img src="../File/Workbench_OpenSCAD.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">Pracovn&iacute; plocha OpenSCAD</a> pro interoperabilitu s OpenSCADem a opravu historie model&#367; <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">konstruktivn&iacute; pevn&eacute; geometrie</a> (CSG).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Robot.svg&amp;filetimestamp=20200404173908&amp;.html" class="mw-file-description"><img src="../File/Workbench_Robot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Robot_Workbench.html" title="Robot Workbench">Pracovn&iacute; plocha Robot</a> pro studium pohyb&#367; robot&#367;. V sou&#269;asn&eacute; dob&#283; nen&iacute; udr&#382;ov&aacute;n.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Testing.html" title="Testing"> Pracovn&iacute; plocha Test Framework</a> slou&#382;&iacute; k lad&#283;n&iacute; FreeCADu.</li></ul>
-<h3><span class="mw-headline" id="The_interface">The interface</span></h3>
+<p><span id="The_interface"></span>
+</p>
+<h3><span id="U.C5.BEivatelsk.C3.A9_rozhran.C3.AD"></span><span class="mw-headline" id="U&#382;ivatelsk&eacute;_rozhran&iacute;">U&#382;ivatelsk&eacute; rozhran&iacute;</span></h3>
 <p>Let's have a better look at the different parts of the interface:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Interface.png&amp;filetimestamp=20240614104510&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Interface.png" decoding="async" width="1847" height="1060" class="mw-file-element" data-file-width="1847" data-file-height="1060"></a></span>
 </p><p>The main window of the application can be roughly divided into 11 sections:
@@ -153,13 +155,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112031342
+Cached time: 20260112031405
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.173 seconds
-Preprocessor visited node count: 202/1000000
+CPU time usage: 0.091 seconds
+Real time usage: 0.146 seconds
+Preprocessor visited node count: 203/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
 Highest expansion depth: 5/100
@@ -169,16 +171,16 @@ Unstrip post&#8208;expand size: 2912/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.890      1 -total
- 57.01%   12.479      1 Template:Manual:TOC
- 36.85%    8.067      1 Manual:Summary/cs
- 11.87%    2.598      3 Template:Version
- 10.58%    2.315      2 Template:VersionMinus
-  9.39%    2.056      2 Template:Docnav
-  7.18%    1.571      2 Template:MenuCommand
+100.00%   12.160      1 -total
+ 54.89%    6.674      1 Template:Manual:TOC
+ 39.97%    4.860      1 Manual:Summary/cs
+ 13.94%    1.695      2 Template:Docnav
+ 10.43%    1.268      3 Template:Version
+  8.60%    1.046      2 Template:VersionMinus
+  6.84%    0.831      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112031342 and revision id 1737028. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112031405 and revision id 1737030. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
