Created page with "Hlavní okno aplikace lze rozdělit zhruba do 11 sekcí:"

--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -117,7 +117,7 @@
 <h3><span id="U.C5.BEivatelsk.C3.A9_rozhran.C3.AD"></span><span class="mw-headline" id="U&#382;ivatelsk&eacute;_rozhran&iacute;">U&#382;ivatelsk&eacute; rozhran&iacute;</span></h3>
 <p>Pod&iacute;vejme se bl&iacute;&#382;e na jednotliv&eacute; &#269;&aacute;sti rozhran&iacute;:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Interface.png&amp;filetimestamp=20240614104510&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Interface.png" decoding="async" width="1847" height="1060" class="mw-file-element" data-file-width="1847" data-file-height="1060"></a></span>
-</p><p>The main window of the application can be roughly divided into 11 sections:
+</p><p>Hlavn&iacute; okno aplikace lze rozd&#283;lit zhruba do 11 sekc&iacute;:
 </p>
 <ol><li>The <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">Main view area</a>, which can contain different tabbed windows.</li>
 <li>The <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, normally embedded in the <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a>. The 3D view is the central element of the interface, displaying and allowing manipulation of the objects you are working on. It is possible to have multiple views of the same document (or objects) or to have several documents open simultaneously. Additionally, each view can be detached from the main window separately.</li>
@@ -155,12 +155,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112031430
+Cached time: 20260112031448
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.169 seconds
+CPU time usage: 0.112 seconds
+Real time usage: 0.166 seconds
 Preprocessor visited node count: 203/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -171,16 +171,16 @@ Unstrip post&#8208;expand size: 2912/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.750      1 -total
- 54.16%   11.239      1 Template:Manual:TOC
- 36.09%    7.488      1 Manual:Summary/cs
- 17.13%    3.554      3 Template:Version
- 11.35%    2.355      2 Template:Docnav
-  6.53%    1.355      2 Template:VersionMinus
-  5.46%    1.133      2 Template:MenuCommand
+100.00%   14.245      1 -total
+ 53.25%    7.586      1 Template:Manual:TOC
+ 35.75%    5.092      1 Manual:Summary/cs
+ 16.15%    2.301      2 Template:Docnav
+  9.27%    1.320      2 Template:VersionMinus
+  8.43%    1.200      2 Template:MenuCommand
+  7.54%    1.074      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112031430 and revision id 1737032. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112031448 and revision id 1737034. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
