Created page with "# [[Main_view_area|Hlavní oblast zobrazení]], která může obsahovat různá okna s kartami. # [[3D_view|3D pohled]], který je obvykle vložen do [[Main_view_area|hlavní oblasti zobrazení]]. 3D pohled je ústředním prvkem rozhraní, který zobrazuje objekty, na kterých pracujete, a umožňuje s nimi manipulovat. Je možné mít více pohledů na stejný dokument (nebo objekty) nebo mít otevřeno několik dokumentů současně. Každý pohled lze navíc oddělit..."

--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -119,19 +119,19 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Interface.png&amp;filetimestamp=20240614104510&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Interface.png" decoding="async" width="1847" height="1060" class="mw-file-element" data-file-width="1847" data-file-height="1060"></a></span>
 </p><p>Hlavn&iacute; okno aplikace lze rozd&#283;lit zhruba do 11 sekc&iacute;:
 </p>
-<ol><li>The <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">Main view area</a>, which can contain different tabbed windows.</li>
-<li>The <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, normally embedded in the <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a>. The 3D view is the central element of the interface, displaying and allowing manipulation of the objects you are working on. It is possible to have multiple views of the same document (or objects) or to have several documents open simultaneously. Additionally, each view can be detached from the main window separately.</li>
-<li>The Model and the <a href="../Task_panel.html" class="mw-redirect" title="Task panel">Tasks</a> tab.
-<ol><li>The Model tab shows you the contents and structure of your document.</li>
-<li>The Tasks tab is where FreeCAD will prompt you for values specific to the workbench and tool you are currently using (for example dimensions of an object).</li></ol></li>
-<li>The <a href="../Property_editor.html" class="mw-redirect" title="Property editor">Property editor</a> which appears when the Model tab is active in the interface. It allows managing the publicly exposed properties of the objects in the document. It consists of the Data and View sections, showing the visualization properties and the parametric properties of the objects respectively.</li>
-<li>The <a href="../Selection_view.html" class="mw-redirect" title="Selection view">Selection view</a> which indicates the objects or sub-elements of objects (vertices, edges, faces) that are selected.</li>
-<li>The <a href="../Report_view.html" class="mw-redirect" title="Report view">Report view</a> where messages, warnings and errors are shown.</li>
-<li>The <a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a>. The Python console, where all the commands executed are printed, and where you can enter Python code.</li>
-<li>The <a href="../Status_bar.html" class="mw-redirect" title="Status bar">Status bar</a> where some messages and tooltips appear.</li>
-<li>The toolbar area, where the toolbars are docked.</li>
-<li>The <a href="../Std_Workbench.html" title="Std Workbench">workbench selector</a>, where you select the active <a href="../Workbenches.html" title="Workbenches">workbench</a>.</li>
-<li>The <a href="../Standard_Menu.html" title="Standard Menu">standard menu</a>, which holds basic operations of the program.</li></ol>
+<ol><li><a href="../Main_view_area.html" class="mw-redirect" title="Main view area">Hlavn&iacute; oblast zobrazen&iacute;</a>, kter&aacute; m&#367;&#382;e obsahovat r&#367;zn&aacute; okna s kartami.</li>
+<li><a href="../3D_view.html" class="mw-redirect" title="3D view">3D pohled</a>, kter&yacute; je obvykle vlo&#382;en do <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">hlavn&iacute; oblasti zobrazen&iacute;</a>. 3D pohled je &uacute;st&#345;edn&iacute;m prvkem rozhran&iacute;, kter&yacute; zobrazuje objekty, na kter&yacute;ch pracujete, a umo&#382;&#328;uje s nimi manipulovat. Je mo&#382;n&eacute; m&iacute;t v&iacute;ce pohled&#367; na stejn&yacute; dokument (nebo objekty) nebo m&iacute;t otev&#345;eno n&#283;kolik dokument&#367; sou&#269;asn&#283;. Ka&#382;d&yacute; pohled lze nav&iacute;c odd&#283;lit od hlavn&iacute;ho okna samostatn&#283;.</li>
+<li>Karta Model a <a href="../Task_panel.html" class="mw-redirect" title="Task panel">&Uacute;koly</a>.
+<ol><li>Karta Model zobrazuje obsah a strukturu dokumentu.</li>
+<li>Na kart&#283; &Uacute;koly v&aacute;s FreeCAD vyzve k zad&aacute;n&iacute; hodnot specifick&yacute;ch pro pracovn&iacute; plochu a n&aacute;stroj, kter&yacute; pr&aacute;v&#283; pou&#382;&iacute;v&aacute;te (nap&#345;&iacute;klad rozm&#283;ry objektu).</li></ol></li>
+<li><a href="../Property_editor.html" class="mw-redirect" title="Property editor">Editor vlastnost&iacute;</a> kter&yacute; se zobraz&iacute;, kdy&#382; je v rozhran&iacute; aktivn&iacute; karta Model. Umo&#382;&#328;uje spravovat ve&#345;ejn&#283; p&#345;&iacute;stupn&eacute; vlastnosti objekt&#367; v dokumentu. Skl&aacute;d&aacute; se z &#269;&aacute;st&iacute; Data a Zobrazen&iacute;, kter&eacute; zobrazuj&iacute; vizualiza&#269;n&iacute; vlastnosti a parametrick&eacute; vlastnosti objekt&#367;.</li>
+<li><a href="../Selection_view.html" class="mw-redirect" title="Selection view">Zobrazen&iacute; v&yacute;b&#283;ru</a> kter&eacute; ozna&#269;uje vybran&eacute; objekty nebo podprvky objekt&#367; (vrcholy, hrany, plochy).</li>
+<li><a href="../Report_view.html" class="mw-redirect" title="Report view">Zobrazen&iacute; zpr&aacute;vy</a> kde se zobrazuj&iacute; zpr&aacute;vy, varov&aacute;n&iacute; a chyby.</li>
+<li><a href="../Python_console.html" class="mw-redirect" title="Python console">Konzola Pythonu</a>. Konzola Pythonu, kde se zobrazuj&iacute; v&scaron;echny proveden&eacute; p&#345;&iacute;kazy a kde m&#367;&#382;ete zad&aacute;vat k&oacute;d Pythonu.</li>
+<li><a href="../Status_bar.html" class="mw-redirect" title="Status bar">Stavov&yacute; &#345;&aacute;dek</a> kde se zobrazuj&iacute; n&#283;kter&eacute; zpr&aacute;vy a popisky.</li>
+<li>Oblast panelu n&aacute;stroj&#367;, kde jsou panely n&aacute;stroj&#367; ukotveny.</li>
+<li><a href="../Std_Workbench.html" title="Std Workbench">V&yacute;b&#283;r pracovn&iacute;ho prost&#345;ed&iacute;</a>, kde vyberete aktivn&iacute; <a href="../Workbenches.html" title="Workbenches">pracovn&iacute; prost&#345;ed&iacute;</a>.</li>
+<li><a href="../Standard_Menu.html" title="Standard Menu">Standardn&iacute; menu</a>, kter&eacute; obsahuje z&aacute;kladn&iacute; funkce programu.</li></ol>
 <p>Most of the above panels can be hidden or revealed using the <b>View &rarr; Panels menu</b>
 </p>
 <h3><span class="mw-headline" id="Customizing_the_interface">Customizing the interface</span></h3>
@@ -155,12 +155,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112031448
+Cached time: 20260112032615
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.166 seconds
+CPU time usage: 0.095 seconds
+Real time usage: 0.274 seconds
 Preprocessor visited node count: 203/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -171,16 +171,16 @@ Unstrip post&#8208;expand size: 2912/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.245      1 -total
- 53.25%    7.586      1 Template:Manual:TOC
- 35.75%    5.092      1 Manual:Summary/cs
- 16.15%    2.301      2 Template:Docnav
-  9.27%    1.320      2 Template:VersionMinus
-  8.43%    1.200      2 Template:MenuCommand
-  7.54%    1.074      3 Template:Version
+100.00%   30.240      1 -total
+ 40.64%   12.288      2 Template:MenuCommand
+ 29.60%    8.952      1 Template:Manual:TOC
+ 21.61%    6.536      1 Manual:Summary/cs
+ 11.34%    3.428      3 Template:Version
+  5.94%    1.795      2 Template:Docnav
+  3.30%    0.997      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112031448 and revision id 1737034. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112032614 and revision id 1737036. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
