--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -132,7 +132,7 @@
 <li>Oblast panelu n&aacute;stroj&#367;, kde jsou panely n&aacute;stroj&#367; ukotveny.</li>
 <li><a href="../Std_Workbench.html" title="Std Workbench">V&yacute;b&#283;r pracovn&iacute;ho prost&#345;ed&iacute;</a>, kde vyberete aktivn&iacute; <a href="../Workbenches.html" title="Workbenches">pracovn&iacute; prost&#345;ed&iacute;</a>.</li>
 <li><a href="../Standard_Menu.html" title="Standard Menu">Standardn&iacute; menu</a>, kter&eacute; obsahuje z&aacute;kladn&iacute; funkce programu.</li></ol>
-<p>Most of the above panels can be hidden or revealed using the <b>View &rarr; Panels menu</b>
+<p>V&#283;t&scaron;inu v&yacute;&scaron;e uveden&yacute;ch panel&#367; lze skr&yacute;t nebo zobrazit pomoc&iacute; menu <b>Zobrazit &rarr; Panely</b>
 </p>
 <h3><span class="mw-headline" id="Customizing_the_interface">Customizing the interface</span></h3>
 <p>The FreeCAD interface is designed for extensive customization. All toolbars and panels can be relocated, stacked, or even docked in various configurations according to user preference. Additionally, they can be closed and then reopened as required. Beyond these capabilities, users have numerous other options including the ability to create custom toolbars with tools selected from any of the available Workbenches, and to assign or modify keyboard shortcuts to streamline workflow. This flexibility ensures that users can tailor the environment to fit their specific needs and preferences.
@@ -155,15 +155,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112032615
+Cached time: 20260112032723
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.274 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.147 seconds
 Preprocessor visited node count: 203/1000000
-Post&#8208;expand include size: 8651/2097152 bytes
-Template argument size: 750/2097152 bytes
+Post&#8208;expand include size: 8650/2097152 bytes
+Template argument size: 749/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -171,16 +171,16 @@ Unstrip post&#8208;expand size: 2912/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.240      1 -total
- 40.64%   12.288      2 Template:MenuCommand
- 29.60%    8.952      1 Template:Manual:TOC
- 21.61%    6.536      1 Manual:Summary/cs
- 11.34%    3.428      3 Template:Version
-  5.94%    1.795      2 Template:Docnav
-  3.30%    0.997      2 Template:VersionMinus
+100.00%   15.956      1 -total
+ 53.24%    8.495      1 Template:Manual:TOC
+ 41.29%    6.589      1 Manual:Summary/cs
+ 12.55%    2.003      2 Template:VersionMinus
+ 11.75%    1.875      2 Template:Docnav
+  9.32%    1.487      3 Template:Version
+  6.78%    1.082      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112032614 and revision id 1737036. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112032723 and revision id 1737038. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
