--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -133,8 +133,9 @@
 <li><a href="../Std_Workbench.html" title="Std Workbench">V&yacute;b&#283;r pracovn&iacute;ho prost&#345;ed&iacute;</a>, kde vyberete aktivn&iacute; <a href="../Workbenches.html" title="Workbenches">pracovn&iacute; prost&#345;ed&iacute;</a>.</li>
 <li><a href="../Standard_Menu.html" title="Standard Menu">Standardn&iacute; menu</a>, kter&eacute; obsahuje z&aacute;kladn&iacute; funkce programu.</li></ol>
 <p>V&#283;t&scaron;inu v&yacute;&scaron;e uveden&yacute;ch panel&#367; lze skr&yacute;t nebo zobrazit pomoc&iacute; menu <b>Zobrazit &rarr; Panely</b>
+</p><p><span id="Customizing_the_interface"></span>
 </p>
-<h3><span class="mw-headline" id="Customizing_the_interface">Customizing the interface</span></h3>
+<h3><span id="P.C5.99izp.C5.AFsoben.C3.AD_u.C5.BEivatelsk.C3.A9ho_rozhran.C3.AD"></span><span class="mw-headline" id="P&#345;izp&#367;soben&iacute;_u&#382;ivatelsk&eacute;ho_rozhran&iacute;">P&#345;izp&#367;soben&iacute; u&#382;ivatelsk&eacute;ho rozhran&iacute;</span></h3>
 <p>The FreeCAD interface is designed for extensive customization. All toolbars and panels can be relocated, stacked, or even docked in various configurations according to user preference. Additionally, they can be closed and then reopened as required. Beyond these capabilities, users have numerous other options including the ability to create custom toolbars with tools selected from any of the available Workbenches, and to assign or modify keyboard shortcuts to streamline workflow. This flexibility ensures that users can tailor the environment to fit their specific needs and preferences.
 </p><p>These advanced customization options are available from the <b>Tools &rarr; Customize menu</b>:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Customization.png&amp;filetimestamp=20240614115852&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Customization.png" decoding="async" width="1847" height="1060" class="mw-file-element" data-file-width="1847" data-file-height="1060"></a></span>
@@ -155,13 +156,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112032723
+Cached time: 20260112032747
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.147 seconds
-Preprocessor visited node count: 203/1000000
+CPU time usage: 0.102 seconds
+Real time usage: 0.161 seconds
+Preprocessor visited node count: 204/1000000
 Post&#8208;expand include size: 8650/2097152 bytes
 Template argument size: 749/2097152 bytes
 Highest expansion depth: 5/100
@@ -171,16 +172,16 @@ Unstrip post&#8208;expand size: 2912/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.956      1 -total
- 53.24%    8.495      1 Template:Manual:TOC
- 41.29%    6.589      1 Manual:Summary/cs
- 12.55%    2.003      2 Template:VersionMinus
- 11.75%    1.875      2 Template:Docnav
-  9.32%    1.487      3 Template:Version
-  6.78%    1.082      2 Template:MenuCommand
+100.00%   16.805      1 -total
+ 51.33%    8.626      1 Template:Manual:TOC
+ 38.01%    6.387      1 Manual:Summary/cs
+ 13.67%    2.297      2 Template:Docnav
+ 10.87%    1.827      3 Template:Version
+ 10.63%    1.786      2 Template:MenuCommand
+  7.42%    1.247      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112032723 and revision id 1737038. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112032746 and revision id 1737040. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
