--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -139,7 +139,7 @@
 <p>Rozhran&iacute; FreeCADu je navr&#382;eno pro rozs&aacute;hl&eacute; p&#345;izp&#367;soben&iacute;. V&scaron;echny panely n&aacute;stroj&#367; a panely lze p&#345;em&iacute;stit, skl&aacute;dat nebo dokonce ukotvit v r&#367;zn&yacute;ch konfigurac&iacute;ch podle preferenc&iacute; u&#382;ivatele. Nav&iacute;c je lze podle pot&#345;eby zav&#345;&iacute;t a znovu otev&#345;&iacute;t. Krom&#283; t&#283;chto funkc&iacute; maj&iacute; u&#382;ivatel&eacute; k dispozici &#345;adu dal&scaron;&iacute;ch mo&#382;nost&iacute;, v&#269;etn&#283; mo&#382;nosti vytv&aacute;&#345;et vlastn&iacute; panely n&aacute;stroj&#367; s n&aacute;stroji vybran&yacute;mi z libovoln&eacute;ho z dostupn&yacute;ch pracovn&iacute;ch prost&#345;ed&iacute; a p&#345;i&#345;azovat nebo upravovat kl&aacute;vesov&eacute; zkratky pro zefektivn&#283;n&iacute; pracovn&iacute;ho postupu. Tato flexibilita zaji&scaron;&#357;uje, &#382;e si u&#382;ivatel&eacute; mohou p&#345;izp&#367;sobit prost&#345;ed&iacute; tak, aby vyhovovalo jejich konkr&eacute;tn&iacute;m pot&#345;eb&aacute;m a preferenc&iacute;m.
 </p><p>Tyto pokro&#269;il&eacute; mo&#382;nosti p&#345;izp&#367;soben&iacute; jsou k dispozici v menu <b>N&aacute;stroje &rarr; P&#345;izp&#367;sobit</b>:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Customization.png&amp;filetimestamp=20240614115852&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Customization.png" decoding="async" width="1847" height="1060" class="mw-file-element" data-file-width="1847" data-file-height="1060"></a></span>
-</p><p><b>Read more</b>
+</p><p><b>Dal&scaron;&iacute; informace:</b>
 </p>
 <ul><li><a href="../Getting_started.html" title="Getting started">Getting started with FreeCAD</a></li>
 <li><a href="../Interface_Customization.html" title="Interface Customization">Customizing the interface</a></li>
@@ -156,12 +156,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112032920
+Cached time: 20260112033055
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.142 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.151 seconds
 Preprocessor visited node count: 204/1000000
 Post&#8208;expand include size: 8653/2097152 bytes
 Template argument size: 752/2097152 bytes
@@ -172,16 +172,16 @@ Unstrip post&#8208;expand size: 2912/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.174      1 -total
- 45.87%    6.502      1 Template:Manual:TOC
- 34.98%    4.958      1 Manual:Summary/cs
- 16.97%    2.406      2 Template:Docnav
- 16.09%    2.280      2 Template:MenuCommand
-  7.98%    1.131      3 Template:Version
-  7.01%    0.993      2 Template:VersionMinus
+100.00%   13.936      1 -total
+ 58.35%    8.132      1 Template:Manual:TOC
+ 35.61%    4.963      1 Manual:Summary/cs
+ 13.09%    1.824      2 Template:Docnav
+  7.97%    1.110      2 Template:MenuCommand
+  7.92%    1.104      3 Template:Version
+  6.72%    0.937      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112032920 and revision id 1737044. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112033055 and revision id 1737046. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
