Created page with "* [[Getting started|Začínáme s FreeCADem]] * [[Interface Customization|Přizpůsobení uživatelského rozhraní]] * [[Workbenches|Pracovní plochy]] * [https://www.python.org Více o Pythonu]"

--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Interfejs programu FreeCAD (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--high" title="[[Manual:A_Interface_do_FreeCAD/pt-br|A Interface do FreeCAD]] (91% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:Interfa&#539;a FreeCAD (18% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; FreeCAD (91% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;FreeCAD &#30028;&#38754; (27% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;The_FreeCAD_Interface.html" class="mw-pt-progress mw-pt-progress--high" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;FreeCAD&#12398;&#12518;&#12540;&#12470;&#12540;&#12452;&#12531;&#12479;&#12501;&#12455;&#12540;&#12473; (91% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -141,10 +141,10 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_Customization.png&amp;filetimestamp=20240614115852&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_Customization.png" decoding="async" width="1847" height="1060" class="mw-file-element" data-file-width="1847" data-file-height="1060"></a></span>
 </p><p><b>Dal&scaron;&iacute; informace:</b>
 </p>
-<ul><li><a href="../Getting_started.html" title="Getting started">Getting started with FreeCAD</a></li>
-<li><a href="../Interface_Customization.html" title="Interface Customization">Customizing the interface</a></li>
-<li><a href="../Workbenches.html" title="Workbenches">Workbenches</a></li>
-<li><a rel="nofollow" class="external text" href="https://www.python.org">More about Python</a></li></ul>
+<ul><li><a href="../Getting_started.html" title="Getting started">Za&#269;&iacute;n&aacute;me s FreeCADem</a></li>
+<li><a href="../Interface_Customization.html" title="Interface Customization">P&#345;izp&#367;soben&iacute; u&#382;ivatelsk&eacute;ho rozhran&iacute;</a></li>
+<li><a href="../Workbenches.html" title="Workbenches">Pracovn&iacute; plochy</a></li>
+<li><a rel="nofollow" class="external text" href="https://www.python.org">V&iacute;ce o Pythonu</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -156,32 +156,32 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112033055
+Cached time: 20260112033223
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.151 seconds
+CPU time usage: 0.113 seconds
+Real time usage: 0.163 seconds
 Preprocessor visited node count: 204/1000000
 Post&#8208;expand include size: 8653/2097152 bytes
 Template argument size: 752/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2912/5000000 bytes
+Unstrip post&#8208;expand size: 2916/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.936      1 -total
- 58.35%    8.132      1 Template:Manual:TOC
- 35.61%    4.963      1 Manual:Summary/cs
- 13.09%    1.824      2 Template:Docnav
-  7.97%    1.110      2 Template:MenuCommand
-  7.92%    1.104      3 Template:Version
-  6.72%    0.937      2 Template:VersionMinus
+100.00%   14.716      1 -total
+ 43.41%    6.388      1 Template:Manual:TOC
+ 32.83%    4.831      1 Manual:Summary/cs
+ 21.27%    3.130      2 Template:Docnav
+ 13.94%    2.052      3 Template:Version
+  9.19%    1.352      2 Template:VersionMinus
+  6.82%    1.003      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112033055 and revision id 1737046. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112033223 and revision id 1737048. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
