Created page with "Alternativně jsou vždy k dispozici některé klávesové zkratky, bez ohledu na styl navigace:"

--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -236,7 +236,7 @@ N&#283;kolik slov o 3D prostoru
 </p><p><span id="Keyboard_navigation"></span>
 </p>
 <h4><span id="Navigace_pomoc.C3.AD_kl.C3.A1vesnice"></span><span class="mw-headline" id="Navigace_pomoc&iacute;_kl&aacute;vesnice">Navigace pomoc&iacute; kl&aacute;vesnice</span></h4>
-<p>Alternatively, some keyboard controls are always available, no matter the navigation style:
+<p>Alternativn&#283; jsou v&#382;dy k dispozici n&#283;kter&eacute; kl&aacute;vesov&eacute; zkratky, bez ohledu na styl navigace:
 </p>
 <ul><li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> + <span typeof="mw:File"><a href="../index.php?title=Ascii_043.svg&amp;filetimestamp=20191120141021&amp;.html" class="mw-file-description"><img src="../File/Ascii_043.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> and <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> + <span typeof="mw:File"><a href="../index.php?title=Ascii_022.svg&amp;filetimestamp=20191120135728&amp;.html" class="mw-file-description"><img src="../File/Ascii_022.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> or <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">PgUp</span> and <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">PgDn</span> to zoom in and out, respectively.</li>
 <li>The arrow keys, <span typeof="mw:File"><a href="../index.php?title=Ascii_017.svg&amp;filetimestamp=20191120135508&amp;.html" class="mw-file-description"><img src="../File/Ascii_017.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span><span typeof="mw:File"><a href="../index.php?title=Ascii_016.svg&amp;filetimestamp=20191120135444&amp;.html" class="mw-file-description"><img src="../File/Ascii_016.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span><span typeof="mw:File"><a href="../index.php?title=Ascii_030.svg&amp;filetimestamp=20191120140145&amp;.html" class="mw-file-description"><img src="../File/Ascii_030.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span><span typeof="mw:File"><a href="../index.php?title=Ascii_031.svg&amp;filetimestamp=20191120140232&amp;.html" class="mw-file-description"><img src="../File/Ascii_031.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span>, to pan the view left/right and up/down.</li>
@@ -278,12 +278,12 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112044715
+Cached time: 20260112044734
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.189 seconds
-Real time usage: 0.280 seconds
+CPU time usage: 0.195 seconds
+Real time usage: 0.330 seconds
 Preprocessor visited node count: 1265/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
@@ -294,16 +294,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.180      1 -total
- 39.12%   11.415     15 Template:ASCII
- 27.69%    8.081      1 Template:Manual:TOC
- 18.00%    5.253      1 Manual:Summary/cs
-  9.32%    2.718      2 Template:Docnav
-  8.87%    2.589     34 Template:KEY
-  4.23%    1.233      2 Template:Version
+100.00%   32.381      1 -total
+ 48.01%   15.545     15 Template:ASCII
+ 19.75%    6.396      1 Template:Manual:TOC
+ 14.59%    4.724      1 Manual:Summary/cs
+  8.32%    2.695     34 Template:KEY
+  6.65%    2.153      2 Template:Docnav
+  4.33%    1.403      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112044715 and revision id 1737078. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112044734 and revision id 1737080. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
